--- a/CaseStudyUnit6_RMarkdown.html
+++ b/CaseStudyUnit6_RMarkdown.html
@@ -138,8 +138,27 @@ $(document).ready(function () {
 ###e. Georgia economy excludes Abkhazia and South Ossetia.  
 ###f. Moldova economy excludes Transnistria.
 
-
-##Reading in &quot;GDP&quot; and &quot;Education&quot; .csv file
+##Getting SessionInfo for run
+sessionInfo()</code></pre>
+<pre><code>## R version 3.2.5 (2016-04-14)
+## Platform: x86_64-w64-mingw32/x64 (64-bit)
+## Running under: Windows 10 x64 (build 10586)
+## 
+## locale:
+## [1] LC_COLLATE=English_United States.1252 
+## [2] LC_CTYPE=English_United States.1252   
+## [3] LC_MONETARY=English_United States.1252
+## [4] LC_NUMERIC=C                          
+## [5] LC_TIME=English_United States.1252    
+## 
+## attached base packages:
+## [1] stats     graphics  grDevices utils     datasets  methods   base     
+## 
+## loaded via a namespace (and not attached):
+##  [1] magrittr_1.5    formatR_1.3     tools_3.2.5     htmltools_0.3.5
+##  [5] yaml_2.1.13     Rcpp_0.12.4     stringi_1.0-1   rmarkdown_0.9.6
+##  [9] knitr_1.12.3    stringr_1.0.0   digest_0.6.9    evaluate_0.9</code></pre>
+<pre class="r"><code>##Reading in &quot;GDP&quot; and &quot;Education&quot; .csv file
 gdp&lt;-read.csv(&quot;C:\\Users\\Earl\\Documents\\CaseStudyUnit6\\gdp_data.csv&quot;, header = TRUE)
 
 ##Determining the dimensions of the &quot;gdp&quot; data set; 214 rows, 4 columns
